Fixed pre overflow. Made headings smaller.

--- a/trunk/web/site/styles.css
+++ b/trunk/web/site/styles.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5 {
 	color:#555;
 }
 h1 {
-	font-size:2.7em;
+	font-size:2.2em;
 	font-weight:normal;
 	margin:-1px 0 10px 0;
 	letter-spacing:-.015em;
@@ -35,7 +35,7 @@ h1, h2, h3, h4, p {
 	border:none;
 }
 h2 {
-	font-size:1.6em;
+	font-size:1.3em;
 	padding:.5em 0 .2em 0;
 	margin:.5em 0 .5em 0;
 	color:#e60;
@@ -344,10 +344,9 @@ ul.sections, .cross-links {
 	background-color:#f9f9e0;
 	color:#520;
 }
-.code {
-	font-family:"courier new",courier,fixed;
-	font-size:1.1em;
-	margin-bottom:.8em;
+
+#article code {
+	font-family:monospace;
 	color:#620;
 }
 
@@ -393,6 +392,7 @@ ul#links49041 li span a {color:#000000; }
 #article
 {
   line-height:1.25em; 
+  width: 32em; /* required on Safari 3 for pre block to scroll */
 }
 
 /* footnotes */
@@ -430,7 +430,8 @@ a.footnoteBackLink:hover {
 
 #article pre
 {
-  overflow: auto;
+  overflow-x: auto;
+  margin-left: 2em;
 }
 
 /* source code */
@@ -473,11 +474,6 @@ a.footnoteBackLink:hover {
 table
 { 
   text-align: left
-}
-
-pre
-{ 
-  margin-left: 2em;
 }
 
 dt
